--- a/src/Components/Screens/Second-Screen/Secondscreen.css
+++ b/src/Components/Screens/Second-Screen/Secondscreen.css
@@ -213,10 +213,12 @@
         flex-direction: row;
         margin-top: 0px;
         gap: 5px;
+        padding-left: 25px;
+        padding-right: 25px;
     }
 
     .phone-section-2 {
-        margin-left: 25px;
+        margin-left: 10px;
         margin-top: 20px;
         align-items: center;
         text-align: center;
@@ -239,6 +241,7 @@
         font-size: 24px;
         line-height: 29px;
         color: #323232;
+        
     }
 
     .sec-bottom {
@@ -277,7 +280,7 @@
         align-items: center;
         text-align: center;
         justify-content: center;
-        margin-top: 50px;
+        margin-top: 90px;
     }
     
     .bottom-header {
